syntax = "proto3";

package mesop.components.box;

message BoxType {
    string styles = 1;
}
