syntax = "proto3";

package mesop.components.markdown;

message MarkdownType {
    string text = 1;
}
