syntax = "proto3";

package mesop.components.text;

message TextType {
    string text = 1;
}
